--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,15 +3,14 @@ server:
 
 spring:
   datasource:
+    url: jdbc:postgresql://dpg-d15sdg0dl3ps7384m040-a.oregon-postgres.render.com:5432/registryapp_meih
+    username: adminibet
+    password: YkpI5mf8OGZcN7C5NGEbRqUuzeIGuA8O
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://dpg-d15p3u6mcj7s73dlf26g-a:5432/registryapp
-    username: ibetadmin
-    password: vZeBYpOuN1Qba5oEzKnJUx6PCSH0BPxk
-
   jpa:
     database: postgresql
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         order_inserts: true
