--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,14 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://dpg-d15sdg0dl3ps7384m040-a.oregon-postgres.render.com:5432/registryapp_meih
-    username: adminibet
-    password: YkpI5mf8OGZcN7C5NGEbRqUuzeIGuA8O
+    url: jdbc:postgresql://dpg-d15tip0dl3ps7385tp00-a.oregon-postgres.render.com:5432/registryapp_59ri
+    username: registryapp_59ri_user
+    password: GDe5yU8tJnxD1QBGfaidZpBEz20RGh2t
     driver-class-name: org.postgresql.Driver
   jpa:
     database: postgresql
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         order_inserts: true
